k8s/mytest/gateway/test-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kwlee.test.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - "kwlee.test.com"
  gateways:
  - test-gateway
  http:
#  - match:
#    - uri:
#        prefix: /kiali
#        exact: /kiali
#    route:
#    - destination:
#        host: kiali
#        port:
#          number: 20001
  - route:
    - destination:
        host: msa-client
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: msa-client
spec:
  host: msa-client
  subsets:
  - name: v1
    labels:
      version: v1
